2010-10-27  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15094: Refactor of content objects of tslib_content

2010-10-27  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15503: Improve t3lib_userAuth::getCookie() (Thanks to Michael Bürgi)

2010-10-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15936: [Caching framework] Entry identifier needs to be sanitized in FileBackend

2010-10-25  Susanne Moog  <typo3@susanne-moog.de>

	* Reverted #16011: Incomplete implementation

2010-10-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16087: htmlArea RTE: Missing soft hyphen entity in CharacterMap
	* Added feature #16127: htmlArea RTE: Add quick tips in character map

2010-10-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16118: htmlArea RTE: cleanup/rewrite DOM to html rendering
	* Follow-up to feature #16118: htmlArea RTE: cleanup/rewrite DOM to html rendering

2010-10-23  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #16110: stdWrap functions stop working as soon as there is one conditional function returning false (Thanks to Jo Hasenau)
	* Added feature #16011: getUrl function support for sending POST data (Thanks to Jigal van Hemert)

2010-10-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16114: htmlArea RTE: cleanup some js code generation code

2010-10-22  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16094: Label "on-click" for formerly "click-enlarge" does not make sense

2010-10-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #15622: t3lib_TCEforms_inline registers superfluous nested level when renderFieldsOnly is set

2010-10-21  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16065: New layout and labels for tt_content show palette labels without content (Thanks to Jo Hasenau)

2010-10-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16079: htmlArea RTE: Register RTE scripts with the autoloader